// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snippet: #0 [babel-ts] format 1`] = `
"'abstract' modifier cannot appear on a type member. (2:3)
  1 | interface Foo {
> 2 |   abstract method();
    |   ^
  3 | }"
`;

exports[`snippet: #0 [typescript] format 1`] = `
"'abstract' modifier cannot appear on a type member (1:16)
> 1 | interface Foo {
    |                ^
> 2 |   abstract method();
    | ^^^^^^^^^^^
  3 | }"
`;

exports[`snippet: #1 [babel-ts] format 1`] = `
"'abstract' modifier cannot appear on a type member. (2:3)
  1 | interface Foo {
> 2 |   abstract property;
    |   ^
  3 | }"
`;

exports[`snippet: #1 [typescript] format 1`] = `
"'abstract' modifier cannot appear on a type member (1:16)
> 1 | interface Foo {
    |                ^
> 2 |   abstract property;
    | ^^^^^^^^^^^
  3 | }"
`;

exports[`snippet: #2 [babel-ts] format 1`] = `
"'declare' modifier cannot appear on a type member. (2:3)
  1 | interface Foo {
> 2 |   declare method();
    |   ^
  3 | }"
`;

exports[`snippet: #2 [typescript] format 1`] = `
"'declare' modifier cannot appear on a type member (1:16)
> 1 | interface Foo {
    |                ^
> 2 |   declare method();
    | ^^^^^^^^^^
  3 | }"
`;

exports[`snippet: #3 [babel-ts] format 1`] = `
"'declare' modifier cannot appear on a type member. (2:3)
  1 | interface Foo {
> 2 |   declare property;
    |   ^
  3 | }"
`;

exports[`snippet: #3 [typescript] format 1`] = `
"'declare' modifier cannot appear on a type member (1:16)
> 1 | interface Foo {
    |                ^
> 2 |   declare property;
    | ^^^^^^^^^^
  3 | }"
`;

exports[`snippet: #4 [babel-ts] format 1`] = `
"Unexpected token, expected ";" (2:10)
  1 | interface Foo {
> 2 |   export method();
    |          ^
  3 | }"
`;

exports[`snippet: #4 [typescript] format 1`] = `
"'export' modifier cannot appear on a type member (1:16)
> 1 | interface Foo {
    |                ^
> 2 |   export method();
    | ^^^^^^^^^
  3 | }"
`;

exports[`snippet: #5 [babel-ts] format 1`] = `
"Unexpected token, expected ";" (2:10)
  1 | interface Foo {
> 2 |   export property;
    |          ^
  3 | }"
`;

exports[`snippet: #5 [typescript] format 1`] = `
"'export' modifier cannot appear on a type member (1:16)
> 1 | interface Foo {
    |                ^
> 2 |   export property;
    | ^^^^^^^^^
  3 | }"
`;

exports[`snippet: #6 [babel-ts] format 1`] = `
"'static' modifier cannot appear on a type member. (2:3)
  1 | interface Foo {
> 2 |   static method();
    |   ^
  3 | }"
`;

exports[`snippet: #6 [typescript] format 1`] = `
"'static' modifier cannot appear on a type member (1:16)
> 1 | interface Foo {
    |                ^
> 2 |   static method();
    | ^^^^^^^^^
  3 | }"
`;

exports[`snippet: #7 [babel-ts] format 1`] = `
"'static' modifier cannot appear on a type member. (2:3)
  1 | interface Foo {
> 2 |   static property;
    |   ^
  3 | }"
`;

exports[`snippet: #7 [typescript] format 1`] = `
"'static' modifier cannot appear on a type member (1:16)
> 1 | interface Foo {
    |                ^
> 2 |   static property;
    | ^^^^^^^^^
  3 | }"
`;

exports[`snippet: #8 [babel-ts] format 1`] = `
"'private' modifier cannot appear on a type member. (2:3)
  1 | interface Foo {
> 2 |   private method();
    |   ^
  3 | }"
`;

exports[`snippet: #8 [typescript] format 1`] = `
"'private' modifier cannot appear on a type member (1:16)
> 1 | interface Foo {
    |                ^
> 2 |   private method();
    | ^^^^^^^^^^
  3 | }"
`;

exports[`snippet: #9 [babel-ts] format 1`] = `
"'private' modifier cannot appear on a type member. (2:3)
  1 | interface Foo {
> 2 |   private property;
    |   ^
  3 | }"
`;

exports[`snippet: #9 [typescript] format 1`] = `
"'private' modifier cannot appear on a type member (1:16)
> 1 | interface Foo {
    |                ^
> 2 |   private property;
    | ^^^^^^^^^^
  3 | }"
`;

exports[`snippet: #10 [babel-ts] format 1`] = `
"'protected' modifier cannot appear on a type member. (2:3)
  1 | interface Foo {
> 2 |   protected method();
    |   ^
  3 | }"
`;

exports[`snippet: #10 [typescript] format 1`] = `
"'protected' modifier cannot appear on a type member (1:16)
> 1 | interface Foo {
    |                ^
> 2 |   protected method();
    | ^^^^^^^^^^^^
  3 | }"
`;

exports[`snippet: #11 [babel-ts] format 1`] = `
"'protected' modifier cannot appear on a type member. (2:3)
  1 | interface Foo {
> 2 |   protected property;
    |   ^
  3 | }"
`;

exports[`snippet: #11 [typescript] format 1`] = `
"'protected' modifier cannot appear on a type member (1:16)
> 1 | interface Foo {
    |                ^
> 2 |   protected property;
    | ^^^^^^^^^^^^
  3 | }"
`;

exports[`snippet: #12 [babel-ts] format 1`] = `
"'public' modifier cannot appear on a type member. (2:3)
  1 | interface Foo {
> 2 |   public method();
    |   ^
  3 | }"
`;

exports[`snippet: #12 [typescript] format 1`] = `
"'public' modifier cannot appear on a type member (1:16)
> 1 | interface Foo {
    |                ^
> 2 |   public method();
    | ^^^^^^^^^
  3 | }"
`;

exports[`snippet: #13 [babel-ts] format 1`] = `
"'public' modifier cannot appear on a type member. (2:3)
  1 | interface Foo {
> 2 |   public property;
    |   ^
  3 | }"
`;

exports[`snippet: #13 [typescript] format 1`] = `
"'public' modifier cannot appear on a type member (1:16)
> 1 | interface Foo {
    |                ^
> 2 |   public property;
    | ^^^^^^^^^
  3 | }"
`;

exports[`snippet: #14 [babel-ts] format 1`] = `
"Unexpected token, expected ";" (2:6)
  1 | interface Foo {
> 2 |   in method();
    |      ^
  3 | }"
`;

exports[`snippet: #14 [typescript] format 1`] = `
"'in' modifier cannot appear on a type member (1:16)
> 1 | interface Foo {
    |                ^
> 2 |   in method();
    | ^^^^^
  3 | }"
`;

exports[`snippet: #15 [babel-ts] format 1`] = `
"Unexpected token, expected ";" (2:6)
  1 | interface Foo {
> 2 |   in property;
    |      ^
  3 | }"
`;

exports[`snippet: #15 [typescript] format 1`] = `
"'in' modifier cannot appear on a type member (1:16)
> 1 | interface Foo {
    |                ^
> 2 |   in property;
    | ^^^^^
  3 | }"
`;

exports[`snippet: #16 [babel-ts] format 1`] = `
"Unexpected token, expected ";" (2:7)
  1 | interface Foo {
> 2 |   out method();
    |       ^
  3 | }"
`;

exports[`snippet: #16 [typescript] format 1`] = `
"'out' modifier cannot appear on a type member (1:16)
> 1 | interface Foo {
    |                ^
> 2 |   out method();
    | ^^^^^^
  3 | }"
`;

exports[`snippet: #17 [babel-ts] format 1`] = `
"Unexpected token, expected ";" (2:7)
  1 | interface Foo {
> 2 |   out property;
    |       ^
  3 | }"
`;

exports[`snippet: #17 [typescript] format 1`] = `
"'out' modifier cannot appear on a type member (1:16)
> 1 | interface Foo {
    |                ^
> 2 |   out property;
    | ^^^^^^
  3 | }"
`;

exports[`snippet: #18 [babel-ts] format 1`] = `
"'abstract' modifier cannot appear on a type parameter. (1:15)
> 1 | interface Foo<abstract T> {}
    |               ^"
`;

exports[`snippet: #18 [typescript] format 1`] = `
"'abstract' modifier cannot appear on a type parameter (1:15)
> 1 | interface Foo<abstract T> {}
    |               ^^^^^^^^"
`;

exports[`snippet: #19 [babel-ts] format 1`] = `
"'declare' modifier cannot appear on a type parameter. (1:15)
> 1 | interface Foo<declare T> {}
    |               ^"
`;

exports[`snippet: #19 [typescript] format 1`] = `
"'declare' modifier cannot appear on a type parameter (1:15)
> 1 | interface Foo<declare T> {}
    |               ^^^^^^^"
`;

exports[`snippet: #20 [babel-ts] format 1`] = `
"Unexpected token, expected "," (1:22)
> 1 | interface Foo<export T> {}
    |                      ^"
`;

exports[`snippet: #20 [typescript] format 1`] = `
"Type parameter declaration expected. (1:15)
> 1 | interface Foo<export T> {}
    |               ^"
`;

exports[`snippet: #21 [babel-ts] format 1`] = `
"Unexpected token, expected "," (1:22)
> 1 | interface Foo<static T> {}
    |                      ^"
`;

exports[`snippet: #21 [typescript] format 1`] = `
"'static' modifier cannot appear on a type parameter (1:15)
> 1 | interface Foo<static T> {}
    |               ^^^^^^"
`;

exports[`snippet: #22 [babel-ts] format 1`] = `
"'private' modifier cannot appear on a type parameter. (1:15)
> 1 | interface Foo<private T> {}
    |               ^"
`;

exports[`snippet: #22 [typescript] format 1`] = `
"'private' modifier cannot appear on a type parameter (1:15)
> 1 | interface Foo<private T> {}
    |               ^^^^^^^"
`;

exports[`snippet: #23 [babel-ts] format 1`] = `
"'protected' modifier cannot appear on a type parameter. (1:15)
> 1 | interface Foo<protected T> {}
    |               ^"
`;

exports[`snippet: #23 [typescript] format 1`] = `
"'protected' modifier cannot appear on a type parameter (1:15)
> 1 | interface Foo<protected T> {}
    |               ^^^^^^^^^"
`;

exports[`snippet: #24 [babel-ts] format 1`] = `
"'public' modifier cannot appear on a type parameter. (1:15)
> 1 | interface Foo<public T> {}
    |               ^"
`;

exports[`snippet: #24 [typescript] format 1`] = `
"'public' modifier cannot appear on a type parameter (1:15)
> 1 | interface Foo<public T> {}
    |               ^^^^^^"
`;

exports[`snippet: #25 [babel-ts] format 1`] = `
"'readonly' modifier cannot appear on a type parameter. (1:15)
> 1 | interface Foo<readonly T> {}
    |               ^"
`;

exports[`snippet: #25 [typescript] format 1`] = `
"'readonly' modifier cannot appear on a type parameter (1:15)
> 1 | interface Foo<readonly T> {}
    |               ^^^^^^^^"
`;
